finalisation de la lettre

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 			   	<p>Je reste à votre disposition pour toute information complémentaire ou pour convenir d'un rendez-vous.
 			    Veuillez agréer, Madame, Monsieur l'expression de mes salutations distinguées.</p>
 		   <footer> 
-			   	<p class="signature">NZAHOU EKOMY B.Cécilia
-			    <img src="assets/img/signature.png" alt="une signature">
+			   	<p class="signature">NZAHOU EKOMY B.Cécilia <br>
+			    <img src="assets/img/signature.png" alt="une signature"></p>
 		   </footer>
 		</main>
 	</body>
